force-app/main/default/objects/DependencyPicklist__mdt/DependencyPicklist__mdt.object-meta.xml
<CustomObject>
    <label>DependencyPicklist</label>
    <pluralLabel>DependencyPicklists</pluralLabel>
</CustomObject>