force-app/main/default/objects/DependencyPicklist__mdt/fields/Recordtype__c.field-meta.xml
<CustomField>
    <fullName>Recordtype__c</fullName>
    <label>Recordtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>