force-app/main/default/objects/DependencyPicklist__mdt/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>SubType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>