force-app/main/default/objects/DependencyPicklist__mdt/fields/Tool__c.field-meta.xml
<CustomField>
    <fullName>Tool__c</fullName>
    <label>Tool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>